# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2020-05-30 Michael Truog   <mjtruog at protonmail dot com>

    * Update exometer_influxdb
    * Update hackney to 1.16.0

2020-05-24 Michael Truog   <mjtruog at protonmail dot com>

    * Set minimum node.js requirement as 0.12.18

2020-05-22 Michael Truog   <mjtruog at protonmail dot com>

    * Fix GHC 7.10.3 compatibility

2020-05-21 Michael Truog   <mjtruog at protonmail dot com>

    * Add the info_key_value_new function to the
      Haskell/OCaml CloudI API
    * Fix the infoKeyValueParse value list order in the
      Haskell CloudI API

2020-05-16 Michael Truog   <mjtruog at protonmail dot com>

    * Change the info_key_value_parse function to be static in the
      Go/JavaScript/Perl/PHP/Python/Ruby CloudI API
    * Add the info_key_value_new function to the
      Go/JavaScript/Perl/PHP/Python/Ruby CloudI API

2020-05-15 Michael Truog   <mjtruog at protonmail dot com>

    * Isolate aspect function exception errors in the same way for
      both internal and external services with the same logging.
      Now aspects_init_after functions execution are included in
      the initialization timeout time period.
      The execution of aspects_request_before functions and
      aspects_request_after functions are already included in the
      service request timeout decrement
      (when the service configuration option
       request_timeout_adjustment is true).
    * Fix the timeout_terminate (TIMEOUT_TERMINATE_MIN) used before
      external services are initialized
    * Change the C CloudI API function name
      cloudi_info_key_value_destroy to
      cloudi_info_key_value_parse_destroy
    * Change the C++ CloudI API function name
      info_key_value_destroy to
      info_key_value_parse_destroy
    * Change the C++ CloudI API key_value functions to be static
      (info_key_value_parse and info_key_value_parse_destroy)