@@ -8,7 +8,7 @@
 %%%
 %%% MIT License
 %%%
-%%% Copyright (c) 2017-2019 Michael Truog <mjtruog at protonmail dot com>
+%%% Copyright (c) 2017-2020 Michael Truog <mjtruog at protonmail dot com>
 %%%
 %%% Permission is hereby granted, free of charge, to any person obtaining a
 %%% copy of this software and associated documentation files (the "Software"),
@@ -29,8 +29,8 @@
 %%% DEALINGS IN THE SOFTWARE.
 %%%
 %%% @author Michael Truog <mjtruog at protonmail dot com>
-%%% @copyright 2017-2019 Michael Truog
-%%% @version 1.8.0 {@date} {@time}
+%%% @copyright 2017-2020 Michael Truog
+%%% @version 1.8.1 {@date} {@time}
 %%%------------------------------------------------------------------------
 
 -module(cloudi_service_test_count).
@@ -126,8 +126,10 @@ cloudi_service_handle_request(RequestType, Name, Pattern,
             end,
             ?LOG_INFO("count == ~w erlang (CRDT)", [CountN]),
             Response = cloudi_string:format_to_binary("~w", [CountN]),
-            {reply, Response, State#state{crdt = CRDTN,
-                                          count = CountN}}
+            ResponseInfo = cloudi_request_info:key_value_new(#{}),
+            {reply, ResponseInfo, Response,
+             State#state{crdt = CRDTN,
+                         count = CountN}}
     end.
 
 cloudi_service_handle_info(#crdt_event{type = EventType,
