@@ -5,7 +5,7 @@
  
   MIT License
 
-  Copyright (c) 2017-2019 Michael Truog <mjtruog at protonmail dot com>
+  Copyright (c) 2017-2020 Michael Truog <mjtruog at protonmail dot com>
 
   Permission is hereby granted, free of charge, to any person obtaining a
   copy of this software and associated documentation files (the "Software"),
@@ -40,9 +40,10 @@ let request request_type name pattern _ _ timeout _ trans_id pid state api =
   let count_new = if count == 4294967295 then 0 else count + 1 in
   state.ServiceState.count <- count_new ;
   print_endline ("count == " ^ (string_of_int count_new) ^ " ocaml") ;
-  let response = string_of_int count_new in
+  let response = string_of_int count_new
+  and response_info = Cloudi.info_key_value_new (Hashtbl.create 1) in
   match Cloudi.return_ api
-    request_type name pattern "" response timeout trans_id pid with
+    request_type name pattern response_info response timeout trans_id pid with
   | Error (error) ->
     Cloudi.NullError (error)
   | Ok _ ->
